assets/sass/app.scss
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
// apply fonts
$fontFamily: "Inter", sans-serif;

body,
* {
  font-family: $fontFamily !important;
}

// scrollbar
::-webkit-scrollbar {
  width: 16px;
}
::-webkit-scrollbar-track {
  background: theme('colors.gray.100');
  border-left: 1px solid theme('colors.gray.200');
}
::-webkit-scrollbar-thumb {
  border: 4px solid theme('colors.gray.100');
  background-clip: padding-box;
  border-radius: 9999px;
  background-color: theme('colors.slate.300');
}
::-webkit-scrollbar-thumb:hover {
  background-color: theme('colors.slate.400');
}
html.dark {
  ::-webkit-scrollbar-track {
    background: theme('colors.slate.800');
    border-left: 1px solid theme('colors.slate.700');
  }
  ::-webkit-scrollbar-thumb {
    border-color: theme('colors.slate.800');
    background-color: theme('colors.slate.500');
  }
  ::-webkit-scrollbar-thumb:hover {
    background-color: theme('colors.slate.400');
  }
}

// transitions
.page-enter-active {
  transition: all 0.1s ease-out;
}
.page-leave-active {
  transition: all 0.3s cubic-bezier(1, 0.5, 0.8, 1);
}
.page-enter-from,
.page-leave-to {
  transform: translateY(20px);
  opacity: 0;
}

.layout-enter-active {
  transition: all 0.1s ease-out;
}
.layout-leave-active {
  transition: all 0.3s cubic-bezier(1, 0.5, 0.8, 1);
}
.layout-enter-from,
.layout-leave-to {
  transform: translateY(-20px);
  opacity: 0;
}

